# LLM-Inference-Optimization-Suite

./: .env.example  .gitignore  PROJECT_STATE.md  README.md  pyproject.toml
configs/: api_pricing.yaml  backend_matrix.yaml  bottleneck_catalog.yaml  experiments.yaml  gpu_costs.yaml  gpu_prices.yaml  load_profiles.yaml  memory_modes.yaml  models.yaml  optimization_catalog.yaml  optimization_negative_rules.yaml  runpod_calibration_profiles.yaml  runpod_projection_prices.yaml  runtime_engines.yaml  scaled_workloads.yaml  serving_profiles.yaml  slo_profiles.yaml  slo_targets.yaml  stress_plan.yaml  vector_stores.yaml  vllm_baseline_experiments.yaml  workloads.yaml
data/: README.md
docs/: 00_project_scope.md  01_reproducibility.md  02_dry_run_plan.md  03_decision_log.md  04_publication_notes.md  05_hf_smoke_test.md  06_result_promotion_policy.md  07_vllm_baseline_plan.md  08_benchmark_methodology.md  08_hf_baseline_findings.md  09_scaled_benchmark_plan.md  100_generation_quality_root_cause_audit.md  101_context_alignment_and_generation_quality_repair.md  102_final_generation_quality_hardening.md  103_b6_500_prompt_quality_scale_gate.md  104_full_run_ai_engineering_readiness.md  105_b6r1_research_ai_truncation_contract_repair.md  106_research_ai_vertical_generation_contract.md  107_b6r3_research_ai_model_capacity_validation.md  108_artifact_sync_and_long_run_recovery.md  108_production_runtime_registry.md  109_b6r4_qwen3b_research_ai_quality_validation.md  109_production_workload_profiles.md  10_vllm_environment_decision.md  110_b6r5_finance_research_quality_repair.md  (+90 more)
(+731 files in other folders)
