[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-inference-optimization-suite"
version = "0.1.0"
description = "A reproducible benchmark suite for learning and measuring LLM inference optimization techniques."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Ogaga Akpomiemie" }
]
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "plotly>=5.22",
    "qdrant-client>=1.12",
    "typer>=0.12",
    "rich>=13.7",
    "pypdf>=4.0",
    "langgraph>=1.2,<2"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
    "mypy>=1.10"
]
hf = [
    "torch",
    "transformers>=4.44",
    "accelerate>=0.33",
    "python-dotenv>=1.0"
]
retail = [
    "huggingface_hub>=0.23",
    "pyarrow>=15.0"
]
openai = [
    "openai>=1.0"
]
eda = [
    "scikit-learn>=1.5",
    "wordcloud>=1.9"
]
retrieval = [
    "sentence-transformers>=3.0"
]
vllm = [
    "vllm"
]

[project.scripts]
inference-bench = "inference_bench.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
